# SummerSchool2016

./: CMakeLists.txt
miniapp/cuda/cxx/: data.h  linalg.cu  linalg.h  main.cu  operators.cu
miniapp/mpi/cxx/: CMakeLists.txt  data.cpp  data.h  linalg.cpp  main.cpp  makefile  operators.cpp
miniapp/openacc/cxx/: data.h  linalg.cpp  main.cpp  operators.cpp
topics/cuda/practicals/: cuda_vector.hpp
topics/cuda/practicals/axpy/: axpy_kernel.cu  newton.cu  util.h
topics/cuda/practicals/diffusion/: diffusion2d.cu  diffusion2d_mpi.cu
topics/cuda/practicals/shared/: dot.cu  string_reverse.cu
topics/mpi/practicals/01.MPI_Intro/cxx/: 1.hello.c  2.hello_withrank.c
topics/mpi/practicals/02.MPI_pt2pt/cxx/: 1.simple_send_recv.c  2.ping_pong.c  3.bandwidth.c  4.sum_ring.c  5.exchange_ghost_cells.c  makefile
topics/mpi/practicals/03.MPI_Coll/cxx/: 1.broadcast.c  2.scatter.c  3.reduce.c  4.allreduce.c  makefile
topics/mpi/practicals/04.MPI_Type/cxx/: 1.struct.c  makefile
topics/mpi/practicals/05.MPI_Topo/cxx/: 1.ring.c  2.exchange_ghost_cells.c
topics/mpiio/: makefile  mpiio.cpp  mpiio.f90
topics/openacc/practicals/diffusion/: diffusion2d.hpp  diffusion2d_openacc.cpp  util.h
topics/openacc/practicals/shared/: blur_openacc.cpp  dot_openacc.cpp
topics/openmp/practicals/cxx/: dot.cpp  hello_world.cpp  laplace.c  normalize.cpp  pi.cpp  sum_threads.cpp
